[PE] Don't clip off outer halves of table collapsed borders

Though the outer halves of collapsed borders belong to the border area
in means of layout, they are actually part of the contents so overflow
clip should not clip off them. Use the border box rect as overflow clip
rect for tables with collapsed borders.

Bug: 789892
Change-Id: Icea5463f1b52f4746aeab4cb82133507fca27de3
Reviewed-on: https://chromium-review.googlesource.com/817647
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#522937}
Former-commit-id: 449fb0c0b85a0f862bffc8ba8c17037ef841b6d9